# fpl-analytics

./: .gitignore  README.md  packages.txt  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
dashboard/: app.py  data_loader.py
dashboard/pages/: 01_Player_Projections.py  01_player_projections.py  02_Fixture_Difficulty.py  03_Team_Strengths.py  03_team_strengths.py  04_Squad_Optimiser.py  05_Transfer_Planner.py  05_transfer_planner.py  06_Price_Changes.py
fpl_analytics/: __init__.py  config.py  db.py
fpl_analytics/ingestion/: __init__.py  __main__.py  data_validator.py  fpl_api.py  refresh.py  results_fetcher.py  understat_fetcher.py
fpl_analytics/models/: __init__.py  dixon_coles.py  score_matrix.py  team_strengths.py
fpl_analytics/optimiser/: __init__.py  captain_picker.py  run.py  squad_optimiser.py  transfer_optimiser.py
fpl_analytics/price_changes/: __init__.py  alerts.py  net_transfers.py  price_model.py
fpl_analytics/projections/: __init__.py  fixture_difficulty.py  minutes_model.py  points_calculator.py  projection_engine.py
fpl_analytics/utils/: __init__.py  fpl_constants.py  logger.py  plotting.py
tests/: conftest.py  test_data_validator.py  test_dixon_coles.py  test_fpl_constants.py  test_points_calculator.py  test_price_changes.py  test_squad_optimiser.py
