[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-analytics"
version = "0.1.0"
description = "Fantasy Premier League Projection & Optimisation System"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Georg" }]

dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aiohttp>=3.8",
    "PuLP>=2.7",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "streamlit>=1.29",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.7",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["fpl_analytics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fpl_analytics --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
